# mimalloc

./: meson.build  meson_options.txt
test/: meson.build
